# hosting

./: .gitignore  ARCHITECTURE.md  ASYNC_UPLOAD_ARCHITECTURE.md  CLAUDE.md  FILE_INVENTORY.md  IMPLEMENTATION.md  NOTES.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_MAP.txt  RAG_DESIGN.md  README.md  REVIEW.md  SETUP.md  TESTING.md  conversation-flow.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
backend/: .dockerignore  .env.example  Dockerfile  MIGRATIONS.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/agent/: runner.py  state.py  steps.py
backend/app/auth/: google_login.py  jwt.py
backend/app/db/: database.py  models.py
backend/app/models/: __init__.py  chat.py  event.py  shopping.py
backend/app/services/: ai_service.py  db_session_manager.py  plan_manager.py  quantity_engine.py  session_manager.py  sheets_service.py  tasks_service.py
backend/evals/: run_evals.py
backend/evals/datasets/: conversation_cases.json  extraction_cases.json
backend/migrations/: env.py
backend/migrations/versions/: 3dcf84ff7b8b_initial.py  e2efd1f7bfd6_add_saved_plans.py
backend/tests/: conftest.py  test_agent_steps.py  test_apply_extraction.py  test_endpoints.py  test_models.py  test_quantity_engine.py  test_runner.py  test_sheets_service.py  test_steps_extended.py  test_websocket.py
docs/: agent-design.md
frontend/: index.html  package-lock.json  package.json  posthog-setup-report.md  vite.config.ts
frontend/public/: privacy.html
frontend/src/: App.tsx  api.ts  main.tsx  posthog.ts  styles.css  types.ts  (+1 more)
k8s/: backend.yaml
(+11 files in other folders)
